--- a/src/VGMTrans.vcxproj.filters
+++ b/src/VGMTrans.vcxproj.filters
@@ -558,6 +558,9 @@
     <ClCompile Include="Options.cpp">
       <Filter>Source Files\main</Filter>
     </ClCompile>
+    <ClCompile Include="BytePattern.cpp">
+      <Filter>Source Files\main</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="windows\aboutdlg.h">
@@ -1023,6 +1026,9 @@
       <Filter>Header Files\loaders</Filter>
     </ClInclude>
     <ClInclude Include="Options.h">
+      <Filter>Header Files\main</Filter>
+    </ClInclude>
+    <ClInclude Include="BytePattern.h">
       <Filter>Header Files\main</Filter>
     </ClInclude>
   </ItemGroup>
