--- a/src/VGMTrans.vcxproj.filters
+++ b/src/VGMTrans.vcxproj.filters
@@ -1057,67 +1057,67 @@
     <None Include="windows\res\addcoll.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\BinToMusic1.ico">
+    <None Include="windows\res\mainframe.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\coll1.ico">
+    <None Include="windows\res\control.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\coll2.ico">
+    <None Include="windows\res\startrep.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\coll3.ico">
+    <None Include="windows\res\endrep.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\coll4.ico">
+    <None Include="windows\res\timesig.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\coll6.ico">
+    <None Include="windows\res\progchange.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\coll7.ico">
+    <None Include="windows\res\trackend.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\DockingDemodoc.ico">
+    <None Include="windows\res\fileframe.ico">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="windows\res\folder_open.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\ico00002.ico">
+    <None Include="windows\res\unknown.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\ico00003.ico">
+    <None Include="windows\res\offset.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\ico00004.ico">
+    <None Include="windows\res\default.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\ico00005.ico">
+    <None Include="windows\res\binary.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\icon2.ico">
+    <None Include="windows\res\length.ico">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="windows\res\instr.ico">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="windows\res\metroleft.ico">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="windows\res\metroright.ico">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="windows\res\TabIcons.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="windows\res\coll.ico">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="windows\res\note.ico">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="windows\res\instrset.ico">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="windows\res\metronomeLeft.ico">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="windows\res\metronomeRight.ico">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="windows\res\msdev_tab_icons.bmp">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="windows\res\musicfolder.ico">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="windows\res\note3.ico">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="windows\res\orchestra.ico">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="windows\res\rawfile.ico">
@@ -1126,27 +1126,27 @@
     <None Include="windows\res\rest.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\seq2.ico">
+    <None Include="windows\res\seq.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\toolbar.bmp">
+    <None Include="windows\res\Toolbar.bmp">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\treble.ico">
+    <None Include="windows\res\track.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\vgmfile.ico">
+    <None Include="windows\res\samp.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\vgmfile_.ico">
+    <None Include="windows\res\sampcoll.ico">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="windows\res\wav.ico">
+    <None Include="windows\res\VGMTrans.ico">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="windows\DockingDemo.rc">
+    <ResourceCompile Include="windows\VGMTrans.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
