Fix memory leak of NinSnesSeq probably. Disable NinSnes since it easily crashes. Add more formats to Root.cpp

--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -326,9 +326,11 @@
     <ClInclude Include="BytePattern.h" />
     <ClInclude Include="Options.h" />
     <ClInclude Include="KabukiDecrypt.h" />
+    <ClInclude Include="OrgFormat.h" />
     <ClInclude Include="RareSnesFormat.h" />
     <ClInclude Include="RareSnesScanner.h" />
     <ClInclude Include="RareSnesSeq.h" />
+    <ClInclude Include="SegSatFormat.h" />
     <ClInclude Include="VGMMiscFile.h" />
     <ClInclude Include="RIFFFile.h" />
     <ClInclude Include="SF2File.h" />
