Move Windows-specific file into windows directory.

--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -192,27 +192,27 @@
     <ClCompile Include="VGMMiscFile.cpp" />
     <ClCompile Include="windows\aboutdlg.cpp" />
     <ClCompile Include="windows\CollDialog.cpp" />
-    <ClCompile Include="DragDropSource.cpp" />
+    <ClCompile Include="windows\DragDropSource.cpp" />
     <ClCompile Include="windows\FileFrame.cpp" />
     <ClCompile Include="windows\HexView.cpp" />
-    <ClCompile Include="HexViewFrame.cpp" />
-    <ClCompile Include="ItemTreeView.cpp" />
+    <ClCompile Include="windows\HexViewFrame.cpp" />
+    <ClCompile Include="windows\ItemTreeView.cpp" />
     <ClCompile Include="windows\LogListView.cpp" />
     <ClCompile Include="windows\mainfrm.cpp" />
-    <ClCompile Include="MediaThread.cpp" />
-    <ClCompile Include="MusicPlayer.cpp" />
-    <ClCompile Include="osdepend.cpp" />
-    <ClCompile Include="RawFileListView.cpp" />
-    <ClCompile Include="RawFileTreeView.cpp" />
-    <ClCompile Include="ScanDlg.cpp" />
+    <ClCompile Include="windows\MediaThread.cpp" />
+    <ClCompile Include="windows\MusicPlayer.cpp" />
+    <ClCompile Include="windows\osdepend.cpp" />
+    <ClCompile Include="windows\RawFileListView.cpp" />
+    <ClCompile Include="windows\RawFileTreeView.cpp" />
+    <ClCompile Include="windows\ScanDlg.cpp" />
     <ClCompile Include="windows\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="VGMCollListView.cpp" />
+    <ClCompile Include="windows\VGMCollListView.cpp" />
     <ClCompile Include="windows\VGMFileListView.cpp" />
     <ClCompile Include="windows\VGMTrans.cpp" />
-    <ClCompile Include="WinVGMRoot.cpp" />
+    <ClCompile Include="windows\WinVGMRoot.cpp" />
     <ClCompile Include="windows\directmidi\C3DBuffer.cpp" />
     <ClCompile Include="windows\directmidi\C3DListener.cpp" />
     <ClCompile Include="windows\directmidi\C3DSegment.cpp" />
@@ -232,7 +232,7 @@
     <ClCompile Include="windows\directmidi\CSampleInstrument.cpp" />
     <ClCompile Include="windows\directmidi\CSegment.cpp" />
     <ClCompile Include="windows\directmidi\Dmhelp.cpp" />
-    <ClCompile Include="MyCoCreateInstance.cpp" />
+    <ClCompile Include="windows\directmidi\MyCoCreateInstance.cpp" />
     <ClCompile Include="windows\directmidi\DSUTIL\DSUTIL.CPP" />
     <ClCompile Include="windows\directmidi\DSUTIL\DXUTIL.CPP" />
     <ClCompile Include="MAMELoader.cpp" />
@@ -341,30 +341,30 @@
     <ClInclude Include="SF2File.h" />
     <ClInclude Include="SynthFile.h" />
     <ClInclude Include="windows\aboutdlg.h" />
-    <ClInclude Include="BmpBtn.h" />
+    <ClInclude Include="windows\BmpBtn.h" />
     <ClInclude Include="windows\CollDialog.h" />
-    <ClInclude Include="DragDropSource.h" />
+    <ClInclude Include="windows\DragDropSource.h" />
     <ClInclude Include="windows\DropFileHandler.h" />
     <ClInclude Include="windows\FileFrame.h" />
     <ClInclude Include="windows\HexView.h" />
-    <ClInclude Include="HexViewFrame.h" />
-    <ClInclude Include="ItemTreeView.h" />
+    <ClInclude Include="windows\HexViewFrame.h" />
+    <ClInclude Include="windows\ItemTreeView.h" />
     <ClInclude Include="windows\LogListView.h" />
     <ClInclude Include="windows\mainfrm.h" />
-    <ClInclude Include="MediaThread.h" />
-    <ClInclude Include="MusicPlayer.h" />
-    <ClInclude Include="MySplitter.h" />
-    <ClInclude Include="RawFileListView.h" />
+    <ClInclude Include="windows\MediaThread.h" />
+    <ClInclude Include="windows\MusicPlayer.h" />
+    <ClInclude Include="windows\MySplitter.h" />
+    <ClInclude Include="windows\RawFileListView.h" />
     <ClInclude Include="windows\RawFileTreeView.h" />
     <ClInclude Include="windows\resource.h" />
-    <ClInclude Include="ScanDlg.h" />
+    <ClInclude Include="windows\ScanDlg.h" />
     <ClInclude Include="windows\stdafx.h" />
     <ClInclude Include="windows\include\TabbedMDISave.h" />
-    <ClInclude Include="VGMCollListView.h" />
+    <ClInclude Include="windows\VGMCollListView.h" />
     <ClInclude Include="windows\VGMFileListView.h" />
-    <ClInclude Include="VGMTransTabCtrl.h" />
-    <ClInclude Include="VGMTransWindow.h" />
-    <ClInclude Include="WinVGMRoot.h" />
+    <ClInclude Include="windows\VGMTransTabCtrl.h" />
+    <ClInclude Include="windows\VGMTransWindow.h" />
+    <ClInclude Include="windows\WinVGMRoot.h" />
     <ClInclude Include="windows\include\atlgdix.h" />
     <ClInclude Include="windows\include\CustomTabCtrl.h" />
     <ClInclude Include="windows\include\DotNetTabCtrl.h" />
@@ -377,7 +377,7 @@
     <ClInclude Include="windows\directmidi\CDirectBase.h" />
     <ClInclude Include="windows\directmidi\CDirectMidi.h" />
     <ClInclude Include="windows\directmidi\CMidipart.h" />
-    <ClInclude Include="MyCoCreateInstance.h" />
+    <ClInclude Include="windows\directmidi\MyCoCreateInstance.h" />
     <ClInclude Include="windows\directmidi\DSUTIL\DSUTIL.H" />
     <ClInclude Include="windows\directmidi\DSUTIL\DXUTIL.H" />
     <ClInclude Include="PSXSPU.h" />
@@ -485,7 +485,7 @@
     <ClInclude Include="loaders\sexypsf\spu\gauss_i.h" />
     <ClInclude Include="loaders\sexypsf\spu\registers.h" />
     <ClInclude Include="loaders\sexypsf\spu\regs.h" />
-    <ClInclude Include="reverb.h" />
+    <ClInclude Include="loaders\sexypsf\spu\reverb.h" />
     <ClInclude Include="loaders\sexypsf\spu\spu.h" />
     <ClInclude Include="tinyxml\tinystr.h" />
     <ClInclude Include="tinyxml\tinyxml.h" />
